--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Will you be my Valentine? 💖</title>
+  <title>Mahi</title>
 
   <style>
     :root{
@@ -190,16 +190,11 @@
 
     <h1>Will you be my Valentine? 💖</h1>
 
-    <p class="subtitle">
-      I made this just for you because you never fail
-      to put a smile on my face. 
-    </p>
-
     <div class="visual-row">
-      <img class="icon" src="images/flower.png" alt="flower">
+      <img class="icon" src="images/flower2.png" alt="flower">
       <img class="icon" src="images/chocolate.png" alt="chocolate">
       <img class="icon" src="images/teddy.png" alt="teddy bear">
-      <img class="icon" src="images/flower.png" alt="flower">
+      <img class="icon" src="images/flower2.png" alt="flower">
     </div>
 
     <div class="buttons">
