--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
 
   // EXACTLY 5 unique messages for 5 clicks
   const noPrompts = [
-    "Wait wait wait—was that a misclick? 😳",
-    "Ouch 😭 my heart just did a tiny *crack* 💔",
-    "Ok but I brought flowers AND chocolate 😤🌸🍫",
+    "Wait wait wait was that a misclick Mahi? 😳",
+    "Ouch 😭 my heart hurt 💔",
+    "Ok please try one more timeee 😤",
     "Please reconsider… the teddy bear is watching 🧸👀",
     "Final answer? Because I’m kinda in love with you 😵‍💫💘"
   ];
