--- a/yes.html
+++ b/yes.html
@@ -240,9 +240,9 @@
             <div class="handwritten">
 Happy Valentine’s Day Mahi!
 
-I love you so much, and I’m so grateful that I can call you mine. You make me feel so complete and happy, and every thought of you makes my heart warm.
+I love you so much, and I’m so grateful that I can call you mine. You make me feel so complete and happy, and every thought of you makes my heart warm. I never have a dull moment with you and you have made my life so special in the past 6 months.
 
-Every time I see you, a smile comes to my face, whether I’m sad, mad, upset, or happy. You are truly my best friend, and I’m so glad I can spend this Valentine’s with you.
+Every time I see you, a smile comes to my face, whether I’m sad, mad, upset, or happy. You are truly my best friend, and I’m so glad I can spend this Valentine’s with you and many more to come in the future.
 
 I love you so much. Mwah 💖
             </div>
@@ -260,7 +260,7 @@ I love you so much. Mwah 💖
 
           <div class="invite-item">
             <div class="label">When:</div>
-            <div class="value">Sunday, February 15th — whenever you wake up</div>
+            <div class="value">Sunday, February 15th, whenever you wake up</div>
           </div>
 
           <div class="invite-item">
