--- a/yes.html
+++ b/yes.html
@@ -260,7 +260,7 @@ I love you so much. Mwah 💖
 
           <div class="invite-item">
             <div class="label">When:</div>
-            <div class="value">Sunday, February 15th, whenever you wake up</div>
+            <div class="value">Sunday, February 15th</div>
           </div>
 
           <div class="invite-item">
@@ -275,7 +275,7 @@ I love you so much. Mwah 💖
 
           <div class="invite-item">
             <div class="label">Plan:</div>
-            <div class="value">Yap 💬💘</div>
+            <div class="value">Yap & Questions 💬💘</div>
           </div>
 
           <div class="rsvp">RSVP: Already accepted 💘</div>
